   die Maske zum Erfassen einer weiteren neuen Einkaufsrechnung
   weitergeleitet wurde.
 - Wiederkehrende Rechnung: beim automatischen Versand erzeugter
   Rechnungen per E-Mail können nun auch Rechnungsattribute als
   Variablen im Betreff & Text der E-Mails genutzt werden
   (z.B. <%invnumber%> für die Rechnungsnummer oder
   <%transaction_description%> für die Vorgangsbezeichnung).

Bugfixes (Tracker: https://www.kivitendo.de/redmine):
97 Benutzer löschen unter System->Benutzer funktioniert nicht


2020-10-02 - Release 3.5.6.1


Mittelgroße neue Features:

 - USTVA: Konjunkturpaket erwarte Pos. 35 und Pos. 36 für Voranmeldung
 - Währung und Wechselkurs können in der (neuen/experimentellen)
   Angebots-/Auftrags-Maske angegeben werden. Der Wechselkurs wird hier
   pro Beleg (und nicht pro Tag) gespeichert.
 - individuelle Lieferadresse in der (neuen/experimentellen) Angebots-/
   Auftrags-Maske

Kleinere neue Features und Detailverbesserungen:

 - Beim automatischen Auslagern über die Verkaufsrechnung kann zusätzlich
   ein Auslagern über das Attribut Seriennummer entspricht Chargennummer
   gemacht werden. Falls die Beleg-Seriennummer nicht auslagerbar ist wird
   eine entsprechende Fehlermeldung generiert (einstellbar in der Mandanten-
   konfiguration).
 - Zahlungsbedingungen auch in Ek-Rechnung angeben können


Bugfixes (Tracker: https://www.kivitendo.de/redmine):
438 individuelle Lieferadresse gerät beim Speichern durcheinander
358 segmentation fault in DBI.so beim versenden einer Rechnung per E-Mail
365 Neuer Order Controller "Individuelle Lieferadresse fehlt"
 35 Zahlungsbedingungen bei Lieferanten nicht in EK-Rechnung

2020-07-20 - Release 3.5.6


Mittelgroße neue Features:

 - komplette Überarbeitung der Standard-LaTeX-Druckvorlagen von PeiTeX
   S.a.: templates/print/marei/Readme.md

 - Erstellung von ZUGFeRD 2.0 fähigen PDFs
 - Verarbeitung von ZUGFeRD 2.0 kompatiblen Eingangsrechnungen über
   Kreditorenbuchungsvorlagen
